# ws-makeovermonday

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
data/processed/: world_pop-UNSD_methodology_processed.csv  world_population_processed.csv
data/raw/: UNSD_methodology.csv  world_population_raw.csv
src/: extract.py  main.py  transform.py
tests/: test_functional.py
