[tool.poetry]
name = "ws-makeovermonday"
version = "0.1.0"
description = ""
authors = ["Felipe Sebben <felipesebben@yahoo.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.17.2"
pandas = "^2.2.0"
taskipy = "^1.12.2"
pydantic = "^2.6.1"
pytest = "^8.0.0"
black = "^24.1.1"
isort = "^5.13.2"
pre-commit = "^3.6.0"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
tests = "pytest tests -v"
format = "isort . && black ."
